--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     }
 
     /*Menu de navegação*/
+
     #principal {
         width: 100%;
         height: 100px;
@@ -70,6 +71,13 @@
             }
 
             /*Seção Principal do site*/
+
+            header .link-dnc a img{
+                height: 70px;
+                
+                
+              
+            }
 
             section {
                 display: flex;
@@ -282,6 +290,11 @@
 
                     /* Menu */
                     
+                    header .link-dnc a img{
+                        height: 70px;
+                        padding: 30px;
+                    }
+
                     #principal{
                         display: flex;
                         flex-direction: column;
